@@ -1,3 +1,8 @@
+[B]Version 2.1.5[/B]
+- Fixed On demand section
+- Added On demand menu navigation
+- Added Banned.video icon
+
 [B]Version 2.1.4[/B]
 - Added Fire Power with Will Johnson
 - On demand section switched to Banned Video site
